--- a/config/bridge.yaml
+++ b/config/bridge.yaml
@@ -9,8 +9,9 @@ ethChain:
   WsEndpoint: "ws://localhost:8546"
   DipManagerAddr: "0x44A25c7dD6031Fa3E9A4f60b29cE8f9c27132ac8"
   DipManagerAbi: "/Users/sun/go/src/github.com/Dipper-Labs/dip-bridge/contracts/eth_contracts/dipport.abi"
-  StartBlockNumber: 5000
-  ConfirmBlockCount: 20
+  StartBlockNumber: 1 #扫描事件的开始区块
+  StartBlockNumberFromRedis: false #是否从redis加载扫描事件的开始区块，首次启动设置为false，再次启动设置为true，强制从配置文件读取设置为false
+  ConfirmBlockCount: 5 #等待多少个区块确认后再扫描事件
 
 
 redis:
