--- a/config/dip_sdk.yaml
+++ b/config/dip_sdk.yaml
@@ -1,5 +1,6 @@
 keystore:
   KeyStoreFileAbsPath: "/Users/sun/go/src/github.com/Dipper-Labs/dip-bridge/config/keystore"
+  KeyStorePasswd: "11111111"
 
 endpoint:
   LiteClientRpcEndpoint: "http://127.0.0.1:1317"
