--- a/config/redis.conf
+++ b/config/redis.conf
@@ -362,7 +362,7 @@ rdb-del-sync-files no
 # The Append Only File will also be created inside this directory.
 #
 # Note that you must specify a directory here, not a file name.
-dir /Users/sun/.redis_data
+dir ~/.redis_data
 
 ################################# REPLICATION #################################
 
@@ -858,6 +858,9 @@ acllog-max-len 128
 #
 # maxmemory <bytes>
 
+# 512M
+maxmemory 536870912
+
 # MAXMEMORY POLICY: how Redis will select what to remove when maxmemory
 # is reached. You can select one from the following behaviors:
 #
@@ -888,6 +891,7 @@ acllog-max-len 128
 # The default is:
 #
 # maxmemory-policy noeviction
+maxmemory-policy noeviction
 
 # LRU, LFU and minimal TTL algorithms are not precise algorithms but approximated
 # algorithms (in order to save memory), so you can tune it for speed or
@@ -1085,7 +1089,7 @@ oom-score-adj-values 0 200 800
 #
 # Please check http://redis.io/topics/persistence for more information.
 
-appendonly no
+appendonly yes
 
 # The name of the append only file (default: "appendonly.aof")
 
